--- a/app/views/state_outpatient_procedures/show.html.haml
+++ b/app/views/state_outpatient_procedures/show.html.haml
@@ -30,7 +30,7 @@
                 %button.btn
                   %i.icon-bar-chart
                   = "GRAPHS"
-          %li
+          %li.active
             %a{:href => "#hospitals", :data => {:toggle => "tab"}}
               %button.btn
                 %i.icon-hospital
