--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,30 +1,43 @@
 - if params[:q].blank?
+  .row-fluid
+    .span6.well
+      .pagination-centered
+        %p
+          %a{:href => inpatient_procedures_path, :class => 'btn btn-large btn-info'}
+            &nbsp;
+            %i.icon-medkit
+            Inpatient Procedures
+        %p
+          %a{:href => outpatient_procedures_path, :class => 'btn btn-large btn-danger'}
+            %i.icon-medkit
+            Outpatient Procedures
+        %p
+          %a{:href => health_providers_path, :class => 'btn btn-large btn-primary'}
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            %i.icon-hospital
+            Hospitals
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
 
-  .pagination-centered
-    %p
-      %a{:href => inpatient_procedures_path, :class => 'btn btn-large btn-warning'}
-        &nbsp;
-        %i.icon-medkit
-        Inpatient Procedures
-    %p
-      %a{:href => outpatient_procedures_path, :class => 'btn btn-large btn-success'}
-        %i.icon-medkit
-        Outpatient Procedures
-    %p
-      %a{:href => health_providers_path, :class => 'btn btn-large btn-primary'}
-        &nbsp;
-        &nbsp;
-        &nbsp;
-        &nbsp;
-        &nbsp;
-        &nbsp;
-        %i.icon-hospital
-        Hospitals
-        &nbsp;
-        &nbsp;
-        &nbsp;
-        &nbsp;
-        &nbsp;
+    .span6.well
+      .pagination-centered
+      = form_tag root_path, :method => :get do
+        %p= text_field_tag :q, nil, :style => 'height:34px; font-size:large;', :placeholder => "Search procedures, hospitals, states, regions, ...", :id => "appendedInputButton", :class => 'span12', :value => params[:q]
+        .input-prepend
+          = select_tag :radius, options_for_select([['Within 10 Miles', 10], ['Within 50 Miles', 50], ['Within 100 Miles', 100], ['Within 500 Miles', 500]], params[:radius]), :include_blank => false, :class => "selectpicker show-tick show-menu-arrow span9"
+          = text_field_tag :zip, nil, :placeholder => "Zipcode (optional)", :class => 'span11', :value => params[:zip]
+        %p
+          = button_tag(type: 'submit', class: "btn btn-large btn-success") do
+            Search
+            %i.icon-search
 
   - if false
     %h2.text-error.pagination-centered
@@ -43,20 +56,21 @@
               = button_tag(type: 'submit', class: "btn btn-large btn-success") do
                 Search
                 %i.icon-search
-    %hr
-    .row
-      .span6
-        .pagination-centered
-          %a{:href => inpatient_procedures_path, :class => 'btn btn-large btn-danger'}
-            %i.icon-medkit
-            Inpatient Procedures
-            %i.icon-play
-      .span6
-        .pagination-centered
-          %a{:href => outpatient_procedures_path, :class => 'btn btn-large btn-primary'}
-            %i.icon-medkit
-            Outpatient Procedures
-            %i.icon-play
+    
+      %hr
+      .row
+        .span6
+          .pagination-centered
+            %a{:href => inpatient_procedures_path, :class => 'btn btn-large btn-danger'}
+              %i.icon-medkit
+              Inpatient Procedures
+              %i.icon-play
+        .span6
+          .pagination-centered
+            %a{:href => outpatient_procedures_path, :class => 'btn btn-large btn-primary'}
+              %i.icon-medkit
+              Outpatient Procedures
+              %i.icon-play
     - if false
       .offset3.span6
         .muted
@@ -112,6 +126,13 @@
                   = result.apc
                 %td
                   = "National Summary"
+              - if result.class.name == 'InpatientProcedure'
+                %td{:style => 'display:none;'}= link_to "Show", inpatient_procedure_path(result)
+                %td
+                  %i.icon-medkit
+                  = result.drg
+                %td
+                  = "National Summary"
               - if result.class.name == 'StateOutpatientProcedure'
                 %td{:style => 'display:none;'}= link_to "Show", state_outpatient_procedure_path(result)
                 %td
@@ -119,11 +140,26 @@
                   = result.apc
                 %td
                   = "State of #{result.state_name}"
+              - if result.class.name == 'StateInpatientProcedure'
+                %td{:style => 'display:none;'}= link_to "Show", state_inpatient_procedure_path(result)
+                %td
+                  %i.icon-medkit
+                  = result.drg
+                %td
+                  = "State of #{result.state_name}"
               - if result.class.name == 'ProviderOutpatientProcedure'
                 %td{:style => 'display:none;'}= link_to "Show", provider_outpatient_procedure_path(result)
                 %td
                   %i.icon-medkit
                   = result.apc
+                %td
+                  = result.provider_name
+                  = result.pretty_address
+              - if result.class.name == 'ProviderInpatientProcedure'
+                %td{:style => 'display:none;'}= link_to "Show", provider_inpatient_procedure_path(result)
+                %td
+                  %i.icon-medkit
+                  = result.drg
                 %td
                   = result.provider_name
                   = result.pretty_address
