--- a/app/views/provider_inpatient_procedures/show.html.haml
+++ b/app/views/provider_inpatient_procedures/show.html.haml
@@ -1,57 +1,60 @@
 - model_class = ProviderInpatientProcedure
-.page-header
-  %h1=t '.title', :default => model_class.model_name.human.titleize
-
-%p
-  %strong= model_class.human_attribute_name(:drg) + ':'
-  %br
-  = @provider_inpatient_procedure.drg
-%p
-  %strong= model_class.human_attribute_name(:provider_id) + ':'
-  %br
-  = @provider_inpatient_procedure.provider_id
-%p
-  %strong= model_class.human_attribute_name(:provider_name) + ':'
-  %br
-  = @provider_inpatient_procedure.provider_name
-%p
-  %strong= model_class.human_attribute_name(:provider_street_address) + ':'
-  %br
-  = @provider_inpatient_procedure.provider_street_address
-%p
-  %strong= model_class.human_attribute_name(:provider_city) + ':'
-  %br
-  = @provider_inpatient_procedure.provider_city
-%p
-  %strong= model_class.human_attribute_name(:provider_state) + ':'
-  %br
-  = @provider_inpatient_procedure.provider_state
-%p
-  %strong= model_class.human_attribute_name(:provider_zipcode) + ':'
-  %br
-  = @provider_inpatient_procedure.provider_zipcode
-%p
-  %strong= model_class.human_attribute_name(:hospital_referral_region_description) + ':'
-  %br
-  = @provider_inpatient_procedure.hospital_referral_region_description
-%p
-  %strong= model_class.human_attribute_name(:total_discharges) + ':'
-  %br
-  = @provider_inpatient_procedure.total_discharges
-%p
-  %strong= model_class.human_attribute_name(:average_covered_charges) + ':'
-  %br
-  = @provider_inpatient_procedure.average_covered_charges
-%p
-  %strong= model_class.human_attribute_name(:average_total_payments) + ':'
-  %br
-  = @provider_inpatient_procedure.average_total_payments
-%p
-  %strong= model_class.human_attribute_name(:year) + ':'
-  %br
-  = @provider_inpatient_procedure.year
-
-.form-actions
-  = link_to t('.back', :default => t("helpers.links.back")), provider_inpatient_procedures_path, :class => 'btn'
-  = link_to t('.edit', :default => t("helpers.links.edit")), edit_provider_inpatient_procedure_path(@provider_inpatient_procedure), :class => 'btn'
-  = link_to t('.destroy', :default => t("helpers.links.destroy")), provider_inpatient_procedure_path(@provider_inpatient_procedure), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
+.row-fluid
+  .span12
+    %h2
+      %a{:href => inpatient_procedure_path(@inpatient_procedure)}
+        %i.icon-medkit
+        = "#{@provider_inpatient_procedure.drg}"
+    %h4
+      %a{:href => health_provider_path(@health_provider)}
+        %i.icon-hospital
+        = @provider_inpatient_procedure.provider_name
+      |
+      %a{:href => state_inpatient_procedure_path(@state_inpatient_procedure)}
+        = @health_provider.state_name
+    .muted.pull-right
+      %strong= " Year #{@health_provider.year}"
+.row-fluid
+  .span12
+    .muted
+      %table.table.table-striped
+        %tr.info
+          %td= "Hospital Average Covered Charges: #{number_to_currency(@provider_inpatient_procedure.average_covered_charges, :precision => 0)}"
+          %td= "Hospital Average Total Payments: #{number_to_currency(@provider_inpatient_procedure.average_total_payments, :precision => 0)}"
+          %td= "Hospital Total Discharges: #{@provider_inpatient_procedure.total_discharges}"
+        %tr.warning
+          %td= "State Average Covered Charges: #{number_to_currency(@state_inpatient_procedure.average_covered_charges, :precision => 0)}"
+          %td= "State Average Total Payments: #{number_to_currency(@state_inpatient_procedure.average_total_payments, :precision => 0)}"
+          %td= "State Total Discharges: #{@state_inpatient_procedure.total_discharges}"
+        %tr.error
+          %td= "National Average Covered Charges: #{number_to_currency(@inpatient_procedure.average_covered_charges, :precision => 0)}"
+          %td= "National Average Total Payments: #{number_to_currency(@inpatient_procedure.average_total_payments, :precision => 0)}"
+          %td= "National Total Discharges: #{@inpatient_procedure.total_discharges}"
+    .tabbable{}
+      .btn-group
+        %ul.nav.nav-pills
+          - if false
+            %li
+              %a{:href => "#procedures", :data => {:toggle => "tab"}}
+                %button.btn
+                  %i.icon-medkit
+                  = "PROCEDURES"
+          %li
+            %a{:href => "#provider_inpatient_procedures_graphs", :data => {:toggle => "tab"}}
+              %button.btn
+                %i.icon-bar-chart
+                = "GRAPHS"
+          %li
+            %a{:href => "#location", :data => {:toggle => "tab"}}
+              %button.btn
+                %i.icon-map-marker
+                = "LOCATION"
+      %hr{:style => "border: 1px solid #B7410E; margin-top:0px;"}
+    .tab-content{}
+      .tab-pane.active{:id => "provider_inpatient_procedures_graphs"}
+        = render :partial => 'graphs'
+      .tab-pane{:id => "location"}
+        = render :partial => 'location'
+      - if false
+        .tab-pane{:id => "procedures"}
+          = link_to @provider_inpatient_procedure.drg, inpatient_procedure_path(@inpatient_procedure)
