--- a/app/views/state_inpatient_procedures/show.html.haml
+++ b/app/views/state_inpatient_procedures/show.html.haml
@@ -1,33 +1,38 @@
 - model_class = StateInpatientProcedure
-.page-header
-  %h1=t '.title', :default => model_class.model_name.human.titleize
-
-%p
-  %strong= model_class.human_attribute_name(:drg) + ':'
-  %br
-  = @state_inpatient_procedure.drg
-%p
-  %strong= model_class.human_attribute_name(:provider_state) + ':'
-  %br
-  = @state_inpatient_procedure.provider_state
-%p
-  %strong= model_class.human_attribute_name(:total_discharges) + ':'
-  %br
-  = @state_inpatient_procedure.total_discharges
-%p
-  %strong= model_class.human_attribute_name(:average_covered_charges) + ':'
-  %br
-  = @state_inpatient_procedure.average_covered_charges
-%p
-  %strong= model_class.human_attribute_name(:average_total_payments) + ':'
-  %br
-  = @state_inpatient_procedure.average_total_payments
-%p
-  %strong= model_class.human_attribute_name(:year) + ':'
-  %br
-  = @state_inpatient_procedure.year
-
-.form-actions
-  = link_to t('.back', :default => t("helpers.links.back")), state_inpatient_procedures_path, :class => 'btn'
-  = link_to t('.edit', :default => t("helpers.links.edit")), edit_state_inpatient_procedure_path(@state_inpatient_procedure), :class => 'btn'
-  = link_to t('.destroy', :default => t("helpers.links.destroy")), state_inpatient_procedure_path(@state_inpatient_procedure), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
+.row-fluid
+  .span12
+    %h2
+      %a{:href => inpatient_procedure_path(@inpatient_procedure)}
+        %i.icon-medkit
+        = "#{@state_inpatient_procedure.drg}"
+    %h4
+      = "State of #{@state_inpatient_procedure.state_name}"
+    .muted.pull-right
+      %strong= " Year #{@state_inpatient_procedure.year}"
+.row-fluid
+  .span12
+    .muted
+      %table.table.table-striped
+        %tr.info
+          %td= "State Average Covered Charges: #{number_to_currency(@state_inpatient_procedure.average_covered_charges)}"
+          %td= "State Average Total Payments: #{number_to_currency(@state_inpatient_procedure.average_total_payments)}"
+          %td= "State Total Discharges: #{@state_inpatient_procedure.total_discharges}"
+        %tr.warning
+          %td= "National Average Covered Charges: #{number_to_currency(@inpatient_procedure.average_covered_charges)}"
+          %td= "National Average Total Payments: #{number_to_currency(@inpatient_procedure.average_total_payments)}"
+          %td= "National Total Discharges: #{@inpatient_procedure.total_discharges}"
+    .tabbable{}
+      .btn-group
+        %ul.nav.nav-pills
+          %li.active
+            %a{:href => "#hospitals", :data => {:toggle => "tab"}}
+              %button.btn
+                %i.icon-hospital
+                = "Hospitals"
+    %hr{:style => "border: 1px solid #B7410E; margin-top:0px;"}
+    .tab-content{}
+      - if false
+        .tab-pane.active{:id => "graphs"}
+          = render :partial => 'graphs'
+      .tab-pane.active{:id => "hospitals"}
+        = render :partial => 'providers'
