home page well height

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -39,7 +39,7 @@
             %i.icon-play-circle
             HOW IT WORKS
         %li
-          %a{:href => nil}
+          %a{:href => '/about'}
             %i.icon-comment
             ABOUT
 .navbar-form.pull-right
