--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,6 @@
 - if params[:q].blank?
   .row-fluid
-    .span6.well
+    .span6.well{:style => "height: 33%; "}
       .pagination-centered
         %p
           %a{:href => inpatient_procedures_path, :class => 'btn btn-large btn-info'}
@@ -27,7 +27,7 @@
             &nbsp;
             &nbsp;
 
-    .span6.well
+    .span6.well{:style => "height: 33%; "}
       .pagination-centered
         = form_tag root_path, :method => :get do
           %p= text_field_tag :q, nil, :style => 'height:44px; font-size:large;', :placeholder => "Search procedures, hospitals, states, regions, ...", :id => "appendedInputButton", :class => 'span12', :value => params[:q]
@@ -37,7 +37,7 @@
               = text_field_tag :zip, nil, :placeholder => "Zipcode (optional)", :class => 'span12', :value => params[:zip]
           %p
             .span12
-              = button_tag(type: 'submit', class: "btn btn-success") do
+              = button_tag(type: 'submit', class: "btn btn-large btn-success") do
                 &nbsp;
                 &nbsp;
                 &nbsp;
