youtube video link

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -35,7 +35,7 @@
         %b.caret
       %ul.dropdown-menu
         %li
-          %a{:href => nil}
+          %a{:href => 'http://youtu.be/7SKoaLhzolA', :target => '_blank'}
             %i.icon-play-circle
             HOW IT WORKS
         %li
