--- a/app/views/outpatient_procedures/show.html.haml
+++ b/app/views/outpatient_procedures/show.html.haml
@@ -92,6 +92,8 @@
             Nothing found
             %br
             &nbsp;
+.form-actions
+  = link_to t('.back', :default => t("helpers.links.back")), outpatient_procedures_path, :class => 'btn'
 
 - if false
   .form-actions
